# nl_game_jam

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: __main__.py  const.py  game.py
src/art/: add_ons.py  arrow.py  bodo.py  color.py  const.py  conveyer_belt.py  image.py
src/art/graphics/: ConveyerBelt-LEFT.piskel  Hole.piskel  Hole1.piskel  Kiste.piskel  Robo-DOWN.piskel  Robo-LEFT.piskel  Robo-RIGHT.piskel  Robo-UP.piskel  Robo-VICTORY.piskel  Turn-LEFT.piskel  move-FORWARD.piskel  move-SLEEP.piskel
src/art/graphics/Running_ConveyerBelt-DOWN/: ConveyerBelt_down_running.piskel
src/grid/: conveyer.py  conveyer_direction.py  grid.py  tile.py
src/levels/: level_0.py  level_1.py  level_2.py  level_3.py
src/player/: player.py  player_directions.py  player_info.py
