[tool.poetry]
name = "nl_game_jam"
version = "0.1.0"
description = ""
authors = ["Leon Blum <82680668+leonblum1208@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
